# avr-simple-lib

./: README.md
examples/RTC_DS1307/: CMakeLists.txt  Makefile  main.c
libs/: twi_hw.c  twi_hw.h  uart.c  uart.h
